--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- PrimeNG Theme -->
-  <link href="https://cdn.jsdelivr.net/npm/primeng@19.0.7/resources/themes/lara-light-blue/theme.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/primeng@19.0.7/resources/primeng.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/primeicons@7.0.0/primeicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/primeng@16.9.1/resources/themes/lara-light-blue/theme.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/primeng@16.9.1/resources/primeng.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/primeicons@7.0.0/primeicons.min.css">
 </head>
 <body>
   <app-root></app-root>
